--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  <header>
 	<div class="container">
-    <img src="/img/cupcake.png" alt="CupCakes Brasil">
+    <img src="./img/cupcake.png" alt="CupCakes Brasil">
 	<p>Cupcakes Brasil</p>
 	</div>
     
@@ -53,28 +53,28 @@
 				<img src="/img/1.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s2">
-				<img src="/img/2.jpeg" alt="CupCakes">
+				<img src="./img/2.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s3">
-				<img src="/img/3.jpeg" alt="CupCakes">
+				<img src="./img/3.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s4">
-				<img src="/img/4.jpeg" alt="CupCakes">
+				<img src="./img/4.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s5">
-				<img src="/img/5.jpeg" alt="CupCakes">
+				<img src="./img/5.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s6">
-				<img src="/img/6.jpeg" alt="CupCakes">
+				<img src="./img/6.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s7">
-				<img src="/img/7.jpeg" alt="CupCakes">
+				<img src="./img/7.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s8">
-				<img src="/img/8.jpeg" alt="CupCakes">
+				<img src="./img/8.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s9">
-				<img src="/img/9.jpeg" alt="CupCakes">
+				<img src="./img/9.jpeg" alt="CupCakes">
 			</div>
 		</div>
 		<div class="navigation">
