--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 			<input type="radio" name="slide" id="slide9">
 
 			<div class="slide s1">
-				<img src="../img/1.jpeg" alt="CupCakes">
+				<img src="./img/1.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s2">
-				<img src="../img/2.jpeg" alt="CupCakes">
+				<img src="./img/2.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s3">
-				<img src="../img/3.jpeg" alt="CupCakes">
+				<img src="./img/3.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s4">
 				<img src="../img/4.jpeg" alt="CupCakes">
