--- a/pedidos.html
+++ b/pedidos.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Pedidos de Cupcakes</title>
-		<link rel="stylesheet" href="./css/master.css">
+		<link rel="stylesheet"  type="text/css" href="css/master.css">
+		
 	</head>
 	<body>
 		<!-- CABEÇALHO -->
