--- a/valores.html
+++ b/valores.html
@@ -9,7 +9,7 @@
  </head>
  <header>
 	<div class="container">
-    <img src="/img/cupcake.png" alt="CupCakes Brasil">
+    <img src="../img/cupcake.png" alt="CupCakes Brasil">
 	<p>Cupcakes Brasil</p>
 	</div>
     
