--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  <header>
 	<div class="container">
-    <img src="./img/cupcake.png" alt="CupCakes Brasil">
+    <img src="../img/cupcake.png" alt="CupCakes Brasil">
 	<p>Cupcakes Brasil</p>
 	</div>
     
@@ -50,7 +50,7 @@
 			<input type="radio" name="slide" id="slide9">
 
 			<div class="slide s1">
-				<img src="../img/1.jpeg" alt="CupCakes">
+				<img src="./img/1.jpeg" alt="CupCakes">
 			</div>
 			<div class="slide s2">
 				<img src="./img/2.jpeg" alt="CupCakes">
