--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
  <header>
 	<div class="container">
-    <img src="../img/cupcake.jpeg" alt="CupCakes Brasil">
+    <img src="./img/cupcake.jpeg" alt="CupCakes Brasil">
 	<p>Cupcakes Brasil</p>
 	</div>
     
