--- a/sabores.html
+++ b/sabores.html
@@ -22,47 +22,47 @@
     </nav>
     <main>
         <div class="gallery-container">
-            <a href="/img/BatataPalha.jpeg" class="gallery-items"><p>Batata Palha</p>
-                <img src="/img/BatataPalha.jpeg" alt="Batata Palha">     
+            <a href="./img/BatataPalha.jpeg" class="gallery-items"><p>Batata Palha</p>
+                <img src="./img/BatataPalha.jpeg" alt="Batata Palha">     
             </a>
-            <a href="/img/Bombonaire.jpeg" class="gallery-items"><p>Bombonaire</p>
-                <img src="/img/Bombonaire.jpeg" alt="Bombonaire">
+            <a href="./img/Bombonaire.jpeg" class="gallery-items"><p>Bombonaire</p>
+                <img src="./img/Bombonaire.jpeg" alt="Bombonaire">
             </a>
-            <a href="/img/Brigadeiro.jpeg" class="gallery-items"><p>Brigadeiro</p>
-                <img src="/img/Brigadeiro.jpeg" alt="Brigadeiro">
+            <a href="./img/Brigadeiro.jpeg" class="gallery-items"><p>Brigadeiro</p>
+                <img src="./img/Brigadeiro.jpeg" alt="Brigadeiro">
             </a>
-            <a href="/img/Cereja.jpeg" class="gallery-items"><p>Cereja</p>
-                <img src="/img/Cereja.jpeg" alt="Cereja">
+            <a href="./img/Cereja.jpeg" class="gallery-items"><p>Cereja</p>
+                <img src="./img/Cereja.jpeg" alt="Cereja">
             </a>
-            <a href="/img/Creme.jpeg" class="gallery-items"><p>Creme</p>
-                <img src="/img/Creme.jpeg" alt="Creme">
+            <a href="./img/Creme.jpeg" class="gallery-items"><p>Creme</p>
+                <img src="./img/Creme.jpeg" alt="Creme">
             </a>
-            <a href="/img/Choco.jpeg" class="gallery-items"><p>Choco</p>
-                <img src="/img/Choco.jpeg" alt="Choco">
+            <a href="./img/Choco.jpeg" class="gallery-items"><p>Choco</p>
+                <img src="./img/Choco.jpeg" alt="Choco">
             </a>
-            <a href="/img/Coco.jpeg" class="gallery-items"><p>Coco</p>
-                <img src="/img/Coco.jpeg" alt="Coco">
+            <a href="./img/Coco.jpeg" class="gallery-items"><p>Coco</p>
+                <img src="./img/Coco.jpeg" alt="Coco">
             </a>
-            <a href="/img/Framboesa.jpeg" class="gallery-items"><p>Framboesa</p>
-                <img src="/img/Framboesa.jpeg" alt="Framboesa">
+            <a href="./img/Framboesa.jpeg" class="gallery-items"><p>Framboesa</p>
+                <img src="./img/Framboesa.jpeg" alt="Framboesa">
             </a>
-            <a href="/img/Frango.jpeg" class="gallery-items"><p>Frango</p>
-                <img src="/img/Frango.jpeg" alt="Framboesa">
+            <a href="./img/Frango.jpeg" class="gallery-items"><p>Frango</p>
+                <img src="./img/Frango.jpeg" alt="Framboesa">
             </a>
-            <a href="/img/Legumes.jpeg" class="gallery-items"><p>Legumes</p>
-                <img src="/img/Legumes.jpeg" alt="Legumes">
+            <a href="./img/Legumes.jpeg" class="gallery-items"><p>Legumes</p>
+                <img src="./img/Legumes.jpeg" alt="Legumes">
             </a>
-            <a href="/img/Morango.jpeg" class="gallery-items"><p>Morango</p>
-                <img src="/img/Morango.jpeg" alt="Morango">
+            <a href="./img/Morango.jpeg" class="gallery-items"><p>Morango</p>
+                <img src="./img/Morango.jpeg" alt="Morango">
             </a>
-            <a href="/img/Proteína.jpeg" class="gallery-items"><p>Proteína</p>
-                <img src="/img/Proteína.jpeg" alt="Proteína">
+            <a href="./img/Proteína.jpeg" class="gallery-items"><p>Proteína</p>
+                <img src="./img/Proteína.jpeg" alt="Proteína">
             </a>
-            <a href="/img/Padrão.jpeg" class="gallery-items"><p>Padrão</p>
-                <img src="/img/Padrão.jpeg" alt="Padrão">
+            <a href="./img/Padrão.jpeg" class="gallery-items"><p>Padrão</p>
+                <img src="./img/Padrão.jpeg" alt="Padrão">
             </a>
-            <a href="/img/Vegano.jpeg" class="gallery-items"><p>Vegano</p>
-                <img src="/img/Vegano.jpeg" alt="Vegano">
+            <a href="./img/Vegano.jpeg" class="gallery-items"><p>Vegano</p>
+                <img src="./img/Vegano.jpeg" alt="Vegano">
             </a>
         </div>
     </main>
