--- a/sabores.html
+++ b/sabores.html
@@ -22,7 +22,7 @@
     </nav>
     <main>
         <div class="gallery-container">
-            <a href="./img/BatataPalha.jpeg" class="gallery-items"><p>Batata Palha</p>
+            <a href="img/BatataPalha.jpeg" class="gallery-items"><p>Batata Palha</p>
                 <img src="./img/BatataPalha.jpeg" alt="Batata Palha">     
             </a>
             <a href="./img/Bombonaire.jpeg" class="gallery-items"><p>Bombonaire</p>
