--- a/sabores.html
+++ b/sabores.html
@@ -23,7 +23,7 @@
     <main>
         <div class="gallery-container">
             <a href="img/BatataPalha.jpeg" class="gallery-items"><p>Batata Palha</p>
-                <img src="./img/BatataPalha.jpeg" alt="Batata Palha">     
+                <img src="img/BatataPalha.jpeg" alt="Batata Palha">     
             </a>
             <a href="./img/Bombonaire.jpeg" class="gallery-items"><p>Bombonaire</p>
                 <img src="./img/Bombonaire.jpeg" alt="Bombonaire">
