--- a/sabores.html
+++ b/sabores.html
@@ -22,17 +22,17 @@
     </nav>
     <main>
         <div class="gallery-container">
-            <a href="img/BatataPalha.jpeg" class="gallery-items"><p>Batata Palha</p>
-                <img src="img/BatataPalha.jpeg" alt="Batata Palha">     
+            <a href="../img/BatataPalha.jpeg" class="gallery-items"><p>Batata Palha</p>
+                <img src="../img/BatataPalha.jpeg" alt="Batata Palha">     
             </a>
-            <a href="./img/Bombonaire.jpeg" class="gallery-items"><p>Bombonaire</p>
-                <img src="./img/Bombonaire.jpeg" alt="Bombonaire">
+            <a href="../img/Bombonaire.jpeg" class="gallery-items"><p>Bombonaire</p>
+                <img src="../img/Bombonaire.jpeg" alt="Bombonaire">
             </a>
-            <a href="./img/Brigadeiro.jpeg" class="gallery-items"><p>Brigadeiro</p>
-                <img src="./img/Brigadeiro.jpeg" alt="Brigadeiro">
+            <a href="../img/Brigadeiro.jpeg" class="gallery-items"><p>Brigadeiro</p>
+                <img src="../img/Brigadeiro.jpeg" alt="Brigadeiro">
             </a>
-            <a href="./img/Cereja.jpeg" class="gallery-items"><p>Cereja</p>
-                <img src="./img/Cereja.jpeg" alt="Cereja">
+            <a href="../img/Cereja.jpeg" class="gallery-items"><p>Cereja</p>
+                <img src="../img/Cereja.jpeg" alt="Cereja">
             </a>
             <a href="./img/Creme.jpeg" class="gallery-items"><p>Creme</p>
                 <img src="./img/Creme.jpeg" alt="Creme">
