--- a/pedidos.html
+++ b/pedidos.html
@@ -69,7 +69,7 @@
 							<label for="assunto">Comentários</label>
 							<br>
 							<textarea name="assunto" rows="10" cols="90"></textarea>
-							<br><input type="hidden" name="_next" value="http://127.0.0.1:5500/agradecimento.html">
+							<br><input type="hidden" name="_next" value="https://macielterra.github.io/cupcakes/agradecimento.html">
 							    <input type="hidden" name="_captcha" value="false">
 								<input type="submit" name="submit" value="Enviar Pedido">
 						</form>
