--- a/agradecimento.html
+++ b/agradecimento.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>Pedidos de Cupcakes</title>
 		<link rel="stylesheet" href="/css/master.css" type="text/css">
-		<link href="css/style.css" type="text/css" rel="stylesheet"/>
+		<link href="./css/style.css" type="text/css" rel="stylesheet"/>
 		</head>
 	<body>
 		<!-- CABEÇALHO -->
